force-app/main/default/objects/Review_Request_Config__c/Review_Request_Config__c.object-meta.xml
<CustomObject>
    <label>Review Request Config</label>
    <nameField>
        <label>Review Request Config</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Request Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>