force-app/main/default/objects/Review_Request_Config__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
  <fullName>Business_Unit__c</fullName>
  <label>Business Unit</label>
  <type>Lookup</type>
  <referenceTo>Business_Unit__c</referenceTo>
  <relationshipLabel>Review Request Configs</relationshipLabel>
  <relationshipName>Review_Request_Configs</relationshipName>
  <deleteConstraint>SetNull</deleteConstraint>
</CustomField>