force-app/main/default/objects/Review_Request_Config__c/fields/Review_URL__c.field-meta.xml
<CustomField>
  <fullName>Review_URL__c</fullName>
  <label>Review URL</label>
  <type>Url</type>
</CustomField>